Migrate to jooq